# active_inference_behavior_analysis

./: .gitignore  README.md  matching.py  matching_fun.py  pyproject.toml
aibes/: model.py  schedule.py  types.py  util.py
extbrst/: .gitignore  analytical_approximation.R  compare_reward_rate.py  find_boundary.R  pyproject.toml
extbrst/config/: sample.yaml
extbrst/extbrst/: compare_reward_rate.py  model.py  schedule.py  types.py  util.py
matching/: matching_example.py  matching_functions.py  matching_stationary.py
tests/: test_model.py  test_schedule.py
